@@ -1,3 +1,8 @@
+Thu Dec 16  6:54:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* GormWindowEditor.m: Implemented selection mechanism including
+	marking subviews within a window by drawing knobs on them.
+
 Wed Dec 15 15:27:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	Archive save/restore fixes.
